style: fixes first page white space issue

--- a/src/client/styles/index.scss
+++ b/src/client/styles/index.scss
@@ -26,7 +26,7 @@ body {
   font-family: 'Source Sans Pro', sans-serif;;
   grid-template-areas: "header" "main" "footer";
   grid-template-columns: 100%;
-  grid-template-rows: 90vmax 1fr 50px;
+  grid-template-rows: 1fr 0 50px;
   grid-column-gap: 0;
   grid-row-gap: 0;
   height: 100%;
@@ -47,6 +47,6 @@ input:focus, select:focus, textarea:focus, button:focus {
 
 @media (min-width: 640px) {
   body {
-    grid-template-rows: 70vmax 1fr 50px;
+    grid-template-rows: 1fr 0 50px;
   }
 }
